# cg50-postvoid

./: .gitignore  CMakeLists.txt  README.md  project.cfg  todo
graphics/: controlscreen.psd  deathscreen.psd  icon-sel.psd  icon-uns.psd  startscreen.psd  winscreen.psd
graphics/controls/: preset1.psd  preset2.psd  preset3.psd
scripts/: convert_animated_sprite.py  convert_sprite.py  gen_map.py
src/: controlsscreen.h  enemy_sprite.h  main.c  map.c  map.h  startscreen.h  wall_texture.h
src/assets/: enemy_melee_attack.h  enemy_melee_walk.h  enemy_sprite.h  gun_idle.h  gun_shoot.h  shoot_effect.h  wall_texture.h
src/screens/: deathscreen.h  preset1.h  preset2.h  preset3.h  startscreen.h  winscreen.h
